tests/NormalTests/paczka1/fuzzy1/87156645.err
Error in line 3: gXhq S930 73,3
Error in line 9: EApOUZBGg A725 15,19
Error in line 4: Nia S413 63,9
Error in line 1: vpUEi S233 15,8
Error in line 15: EApOUZBGg A725 62,0
Error in line 29: S413 S233 19,5
